--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
 
 @font-face {
     font-family: Righteous;
-    src: url("../css/Righteous-Regular.ttf");
+    src: url("css/Righteous-Regular.ttf");
 }
 
 #sidebar {
