--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ h6 {
     padding: 10px;
     margin-bottom: 10px;
     border-radius: 5px;
+    background: #1d1d1d;
 }
 
 .sceneNodeIcon:hover {
@@ -128,13 +129,12 @@ h6 {
 
 #sidebar input {
     background: none;
-    border: none;
-    background: #3d3d3d;
     padding: 10px;
     width: 100%;
     box-sizing: border-box;
-    margin-bottom: 10px;
-    border-radius: 5px;
+    border-radius: 0px 0px 5px 5px;
+    border: #1d1d1d dashed 2px;
+    border-top: none;
 }
 
 #sidebar hr {
@@ -146,12 +146,12 @@ h6 {
 .nodeSceneLabel {
     text-transform: capitalize;
     padding: 10px;
-    margin-bottom: 10px;
+    margin-top: 10px;
     width: 100%;
     background: #1d1d1d;
     display: inline-block;
     box-sizing: border-box;
-    border-radius: 5px;
+    border-radius: 5px 5px 0px 0px;
 }
 
 .titlebar {
