--- a/player/style.css
+++ b/player/style.css
@@ -1,55 +1,64 @@
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
     overflow: hidden;
     user-select: none;
-    font-family: horangfont;
     transition: all 0.5s ease !important;
     background: #000000;
     height: 100vh;
     width: 100vw;
 }
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'horangfont';
+    outline: none;
+}
+
 @font-face {
-    font-family: horangfont;
+    font-family: 'horangfont';
     src: url("../css/Righteous-Regular.ttf");
 }
 
-#menutoggle {
+#navigation {
     position: absolute;
     z-index: 2;
-    bottom: 0;
-    height: 50px;
-    width: 50px;
-    margin: 10px;
+    top: 0;
+    height: 40px;
+    width: 100vw;
     border: none;
     background: none;
-    padding: 0;
+    padding: 5px;
+    background: #00000050;
 }
 
-#menutoggle img {
-    width: 100%;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px 0 rgb(0 0 0 / 20%), 0 6px 20px 0 rgb(0 0 0 / 19%);
+#health {
+    height: 100%;
+    float: right;
+}
+
+#navigation img {
+    height: 100%;
+    border-radius: 5px;
 }
 
 .sidenav {
-    height: 100%;
+    height: calc(100vh - 40px);
     width: 0;
     position: fixed;
     z-index: 1;
-    top: 0;
     left: 0;
     background-color: #1d1d1d;
     overflow: hidden;
     transition: 0.5s;
+    z-index: 10;
+    bottom: 0;
 }
 
 .sidenav a {
     padding: 10px 20px;
     text-decoration: none;
-    font-size: 17.5px;
+    font-size: 15px;
     color: #818181;
     display: block;
     transition: 0.3s;
@@ -104,21 +113,25 @@ body {
 
 #devtools {
     position: absolute;
-    z-index: 2;
     height: 100vh;
     box-sizing: border-box;
     overflow: hidden;
-    right: 0;
     transition: 0.5s;
+    z-index: 10;
+    right: 0;
 }
 
 #terminal {
+    position: absolute;
+    right: 0;
     backdrop-filter: blur(10px);
     background: #1d1d1dab;
     padding: 20px;
-    height: 100%;
+    height: calc(100vh - 40px);
+    bottom: 0;
     color: white;
     overflow: auto;
+    width: 100%;
 }
 
 #skiploading {
@@ -131,25 +144,30 @@ body {
 }
 
 #chats {
-    overflow: hidden;
+    overflow: auto;
     display: flex;
     flex-direction: column-reverse;
     position: absolute;
     z-index: 1;
-    padding: 20px;
+    padding: 10px;
     height: 20vh;
     width: 20vw;
     transition: 0.5s;
-    text-shadow: 0px 0px 5px #000000;
-    opacity: 0.5;
-    pointer-events: none;
+    margin-top: 45px;
+    margin-left: 5px;
+    background: #00000050;
 }
 
-#chats:hover {
-    opacity: 1;
-    background: #1d1d1dab;
-    overflow: auto;
-    text-shadow: none;
+#chats input {
+    padding: 5px;
+    margin-top: 10px;
+    background: #ffffff50;
+    color: black;
+    border: none;
+}
+
+#chats input::placeholder {
+  color: black;
 }
 
 #chats p {
