--- a/player/style.css
+++ b/player/style.css
@@ -4,7 +4,7 @@ body {
     touch-action: manipulation;
     transition: all 0.5s ease !important;
     background: #000000;
-    height: 100vh;
+    height: 100dvh;
     width: 100vw;
 }
 
@@ -44,7 +44,7 @@ body {
 }
 
 .sidenav {
-    height: calc(100vh - 40px);
+    height: calc(100dvh - 40px);
     width: 0;
     position: fixed;
     z-index: 1;
@@ -105,7 +105,7 @@ body {
 
 .loadingScreen {
     width: 100vw;
-    height: 100vh;
+    height: 100dvh;
     position: absolute;
     z-index: 10;
     backdrop-filter: blur(10px);
@@ -119,7 +119,7 @@ body {
 
 #devtools {
     position: absolute;
-    height: 100vh;
+    height: 100dvh;
     box-sizing: border-box;
     overflow: hidden;
     transition: 0.5s;
@@ -133,7 +133,7 @@ body {
     backdrop-filter: blur(10px);
     background: #1d1d1dab;
     padding: 20px;
-    height: calc(100vh - 40px);
+    height: calc(100dvh - 40px);
     bottom: 0;
     color: white;
     overflow: auto;
@@ -197,8 +197,8 @@ body {
 }
 
 #joyDiv {
-    width: 10%;
-    height: 20%;
+    width: 40dvh;
+    height: 40dvh;
     bottom: 0;
     left: 0;
     margin: 30px;
